2013-07-22  Martin Pärtel <martin dot partel at gmail dot com>

	* Added --chmod-filter, contributed by Anton Ageev. Thanks!
	* Released 1.12.2
	* Project home page is now bindfs.org

2013-05-08  Martin Pärtel <martin dot partel at gmail dot com>

	* Fixed building against latest FUSE e.g. on Ubuntu 13.04.
	* Released 1.12.1

2013-03-01  Martin Pärtel <martin dot partel at gmail dot com>

	* Deprecated --user, --owner and --group
	  in favor of --force-user and --force-group
	  to avoid conflict with standard mount options
	  (issue 25).
	* Released 1.12

2012-09-15  Martin Pärtel <martin dot partel at gmail dot com>

	* Fix for setgid directories by Jonathan Dieter. Thanks!
	* Run in singlethreaded mode by default.
	* Added --multithreaded option.
	* Documented a race condition in multithreaded mode.
	* Released 1.11

2012-07-15  Martin Pärtel <martin dot partel at gmail dot com>

	* Fix readdir() yet again, though this only matters in
	  exceedingly rare cases.
	* Fix --enable-debug-output.
	* Released 1.10.7

2012-07-04  Martin Pärtel <martin dot partel at gmail dot com>

	* Use NAME_MAX when pathconf fails.
	  Thanks again to Jan Engelhardt.
	* Fixed slow user account checks when using --mirror @group
	  as suggested by Jan Engelhardt.
	* Released 1.10.6

2012-07-03  Martin Pärtel <martin dot partel at gmail dot com>

	* Build system improvements from Jan Engelhardt.
	* readdir_r() bugfix from Jan Engelhardt.
	* Released 1.10.5

2012-06-18  Martin Pärtel <martin dot partel at gmail dot com>

	* Added --valgrind support to tests/test_bindfs.rb.
	* Fixed a memory error.
	* Released 1.10.4

2012-05-18  Martin Pärtel <martin dot partel at gmail dot com>

	* Fixed regression of --create-as-user. Added test case.
	* Use the reentrant readdir_r().
	* Released 1.10.3

2012-04-05  Martin Pärtel <martin dot partel at gmail dot com>

	* Made -ouse_ino and -oreaddir_ino the default to
	  mirror inodes.
	* Released 1.10.2
