@@ -1,6 +1,7 @@
 
-noinst_PROGRAMS = readdir_inode
+noinst_PROGRAMS = readdir_inode utimens_nofollow
 readdir_inode_SOURCES = readdir_inode.c
+utimens_nofollow_SOURCES = utimens_nofollow.c
 
 TESTS = test_bindfs.rb
 SUBDIRS = internals
