@@ -371,6 +371,21 @@ root_testenv("", :title => "setgid directories") do
     assert { File.stat('mnt/dir/file').gid == $nogroup_gid }
 end
 
+root_testenv("", :title => "utimens on symlinks") do
+    touch('mnt/file')
+    Dir.chdir "mnt" do
+      system('ln -sf file link')
+    end
+    
+    system("#{$tests_dir}/utimens_nofollow mnt/link 12 34 56 78")
+    raise "Failed to run utimens_nofollow: #{$?.inspect}" unless $?.success?
+    
+    assert { File.lstat('mnt/link').atime.to_i < 100 }
+    assert { File.lstat('mnt/link').mtime.to_i < 100 }
+    assert { File.lstat('mnt/file').atime.to_i > 100 }
+    assert { File.lstat('mnt/file').mtime.to_i > 100 }
+end
+
 # FIXME: this stuff around testenv is a hax, and testenv may also exit(), which defeats the 'ensure' below.
 # the test setup ought to be refactored. It might well use MiniTest or something.
 if Process.uid == 0
